--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <rabbitmq.version>5.3.0</rabbitmq.version>
+        <org.springframework.version>4.3.18.RELEASE</org.springframework.version>
     </properties>
 
     <dependencies>
@@ -45,6 +46,16 @@
                 <groupId>com.rabbitmq</groupId>
                 <artifactId>amqp-client</artifactId>
                 <version>${rabbitmq.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${org.springframework.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
