--- a/rabbitmq/src/main/resources/log4j.properties
+++ b/rabbitmq/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootLogger = DEBUG, X
 
 # Set the appender named X to be a File appender
-log4j.appender.X=org.apache.log4j.FileAppender
+log4j.appender.X=org.apache.log4j.ConsoleAppender
 
 # Define the layout for X appender
 log4j.appender.X.layout=org.apache.log4j.PatternLayout
