--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>java-spi</module>
         <module>rabbitmq</module>
         <module>spring-xml-custom</module>
+        <module>netty4me</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -20,6 +21,7 @@
         <java.version>1.8</java.version>
         <rabbitmq.version>5.3.0</rabbitmq.version>
         <org.springframework.version>4.3.18.RELEASE</org.springframework.version>
+        <netty.version>4.1.36.Final</netty.version>
     </properties>
 
     <dependencies>
@@ -56,6 +58,11 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
