--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>rabbitmq</module>
         <module>spring-xml-custom</module>
         <module>netty4me</module>
+        <module>spring-transaction</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -22,6 +23,11 @@
         <rabbitmq.version>5.3.0</rabbitmq.version>
         <org.springframework.version>4.3.18.RELEASE</org.springframework.version>
         <netty.version>4.1.36.Final</netty.version>
+        <mysql.version>6.0.3</mysql.version>
+        <HikariCP.version>3.3.1</HikariCP.version>
+        <aspectjweaver.version>1.8.9</aspectjweaver.version>
+        <aspectjrt.version>1.8.9</aspectjrt.version>
+        <cglib.version>3.2.2</cglib.version>
     </properties>
 
     <dependencies>
@@ -58,6 +64,46 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+                <version>${HikariCP.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectjweaver.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>${cglib.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectjrt.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
